-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.1
-
None
-
ea9e620a7f5bfbac63ccc9017732bb78db8e5356
When using more than one monitor, a popup should never cross monitor boundaries.
Native implementations (Windows/Linux) and QtWidgets snap the popup to 1 screen only
For Gerrit Dashboard: QTBUG-45228 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
109380,3 | Don't show popup menu on two screens at the same time. | 5.4 | qt/qtquickcontrols | Status: MERGED | +2 | 0 |