Don't show popup menu on two screens at the same time.

When using more than 1 monitor, snap to 1 monitor instead of
crossing screen boundaries.

That's how native implementations and QtWidgets do it.

Task-number: QTBUG-45228
Change-Id: Icbeb9045a04ad4d4f81295603cbf1b81dcc44442
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>
Reviewed-by: Alan Alpert <aalpert@blackberry.com>